--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@
   background-color:#eff0f2;
   display:flex;
   align-items:center;
+  justify-content: space-between;
+  padding:5px;
+}
+.actor_details{
+  display:flex;
+  align-items:center;
 }
 .actor_img{
   background-color:white;
